Phase_2/test/test_12111624_5.out
Error type 5 at Line 12: unmatching types for assign(=).
