Phase_2/test/test_12111624_5.spl
struct aa {
    int bb;
    float cc;
    char dd;
} ee, ff, gg[214748];
int www;

int main(){
    gg[114514] = ee = ff;
    ff.bb = ee.bb + www;

    gg[0].dd = 123;
}